# tp_tasks

.github/workflows/: main.yml
TpPatterns/: Army.cpp  Army.h  ArmyNode.cpp  ArmyNode.h  CMakeLists.txt  Description.md  Event.cpp  Event.h  Finance.cpp  Finance.h  FractionFactory.cpp  FractionFactory.h  Fractions.cpp  Fractions.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  Squad.cpp  Squad.h  Unit.cpp  Unit.h  Units.cpp  Units.h  main.cpp
TpPatterns/AllFractions/: AttackingFraction.cpp  AttackingFraction.h  DefendingFraction.cpp  DefendingFraction.h  EconomyFraction.cpp  EconomyFraction.h  IncludeAll.h
TpPatterns/AllUnits/: Archer.cpp  Archer.h  Civilian.cpp  Civilian.h  HorseRider.cpp  HorseRider.h  IncludeAll.h  Swordsman.cpp  Swordsman.h
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: Test.cpp  main.cpp  main.h  main_test.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/.github/workflows/: main.yml
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp
task5/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
